5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1758_1183.log
== TEST (2019-05-30 00:46:07) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vetor:")))
i = 0
j = 0
while(i<size(v)):
	if(v[i]>=0):
		j = j+1
	   i=i+1	
		
k = 0
l = 0

v2=zeros(j, dtype=int)

while(k<size(v)):
	if(v[k])>=0:
		v2[1] = v[k]
		l = l+1
		k=k+1
print(v2)		
	
-- ERROR:
File "XXXX", line 8
    i=i+1	
         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:46:31) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vetor:")))
i = 0
j = 0
while(i<size(v)):
	if(v[i]>=0):
		j = j+1
	i=i+1	
		
k = 0
l = 0

v2=zeros(j, dtype=int)

while(k<size(v)):
	if(v[k])>=0:
		v2[1] = v[k]
		l = l+1
	k=k+1
print(v2)		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:47:10) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vetor:")))
i = 0
j = 0
while(i<size(v)):
	if(v[i]>=0):
		j = j+1
	i=i+1	
		
k = 0
l = 0

v2=zeros(j, dtype=int)

while(k<size(v)):
	if(v[k])>=0:
		v2[1] = v[k]
		l = l+1
	k=k+1
print(v2)		
	
-- EXECUTION TIME:
0.524483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 17, in <module>
    v2[1] = v[k]
IndexError: index 1 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:47:44) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vetor:")))
i = 0
j = 0
while(i<size(v)):
	if(v[i]>=0):
		j = j+1
	i=i+1	
		
k = 0
l = 0

v2=zeros(j, dtype=int)

while(k<size(v)):
	if(v[k])>=0:
		v2[l] = v[k]
		l = l+1
	k=k+1
print(v2)		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:48:10) 
-- CODE:
from numpy import*
v = array(eval(input("Digite o vetor:")))
i = 0
j = 0
while(i<size(v)):
	if(v[i]>=0):
		j = j+1
	i=i+1	
		
k = 0
l = 0

v2=zeros(j, dtype=int)

while(k<size(v)):
	if(v[k])>=0:
		v2[l] = v[k]
		l = l+1
	k=k+1
print(v2)		
	
-- EXECUTION TIME:
0.443153
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
